build: enable experimental switch expressions
(The build will be updated to JDK 14 once Gradle 6.3 is out.)